adjustments per Carl's suggestions